--- a/dd.ipynb
+++ b/dd.ipynb
@@ -50,7 +50,48 @@
     "    else:\n",
     "        filename = \"\"\n",
     "    !wget -P \"$tempsave\"$filename \"$directurl\"\n",
-    "    !mv \"$tempsave\"/* \"$save_dir\""
+    "    !mv \"$tempsave\"/* \"$save_dir\"\n",
+    "\n",
+    "def hqpGetInnerURL(url):\n",
+    "    reqOutput = !curl $url\n",
+    "    outputStr = \"\".join(reqOutput)\n",
+    "    srch = ptrDaddy.search(outputStr)\n",
+    "    if srch:\n",
+    "        return f\"https://{srch.group()}\"\n",
+    "    else:\n",
+    "        print(\"Search is \", type(srch))\n",
+    "\n",
+    "def hqpDCCDownload(hqpURL, saveDir= \"/content\", name= \"\"):\n",
+    "    print(f\"Looking for dcc url in: {hqpURL}\\n\\t...\\n\")\n",
+    "    reqOutput = !curl $hqpURL\n",
+    "    invalid = False\n",
+    "    if reqOutput:\n",
+    "        newOutputStr = reqOutput[0]\n",
+    "        varRes = ptrVars.findall(newOutputStr)\n",
+    "        if varRes:\n",
+    "            valDict = {}\n",
+    "            for mtch in varRes:\n",
+    "                valPt = f'(?<={mtch}=\")(\\/\\/|\\d)[^\"]+'\n",
+    "                valSch = re.search(valPt, newOutputStr)\n",
+    "                if not valSch:\n",
+    "                    print(f\"Val for {mtch} wasn't found!\")\n",
+    "                    invalid = True\n",
+    "                    break\n",
+    "                valDict[mtch] = valSch.group()\n",
+    "            if not invalid:\n",
+    "                val1Sch = re.search('(?<=replaceAll\\(\"nrpuv\",)[a-z]{8}', newOutputStr)\n",
+    "                val2Sch = re.search('(?<=\\+\"pubs\\/\"\\+)[a-z]{8}', newOutputStr)\n",
+    "                if val1Sch and val2Sch:\n",
+    "                    val1 = val1Sch.group()\n",
+    "                    val2 = val2Sch.group()\n",
+    "                    vidUrl = f\"https:{valDict[val1]}pubs/{valDict[val2]}/1080.mp4\"\n",
+    "                else:\n",
+    "                    invalid = True\n",
+    "            if not invalid:\n",
+    "                print(f\"Found URL:\\n\\t{vidUrl}\\n\\n\")\n",
+    "                download(vidUrl, save_dir= saveDir, name= name)\n",
+    "            else:\n",
+    "                print(valDict, \"\\n\", f\"val1: {val1}, val2: {val2}\")\n"
    ]
   },
   {
@@ -108,50 +149,25 @@
     "Name = \"\" #@param {type:\"string\"}\n",
     "\n",
     "VidURL = VidURL.strip()\n",
-    "if not VidURL:\n",
-    "    output = !curl $MainURL\n",
-    "    outputStr = \"\".join(output)\n",
-    "    srch = ptrDaddy.search(outputStr)\n",
+    "if MainURL and not VidURL:\n",
+    "    VidURL = hqpGetInnerURL(MainURL)\n",
     "\n",
-    "    if srch:\n",
-    "        VidURL = f\"https://{srch.group()}\"\n",
-    "\n",
-    "print(f\"Looking for daddycc url in: {VidURL}\\n\\t...\\n\")\n",
     "if VidURL:\n",
-    "    newOutput = !curl $VidURL\n",
-    "    invalid = False\n",
-    "    if newOutput:\n",
-    "        newOutputStr = newOutput[0]\n",
-    "        varRes = ptrVars.findall(newOutputStr)\n",
-    "        if varRes:\n",
-    "            valDict = {}\n",
-    "            for mtch in varRes:\n",
-    "                valPt = f'(?<={mtch}=\")(\\/\\/|\\d)[^\"]+'\n",
-    "                valSch = re.search(valPt, newOutputStr)\n",
-    "                if not valSch:\n",
-    "                    print(f\"Val for {mtch} wasn't found!\")\n",
-    "                    invalid = True\n",
-    "                    break\n",
-    "                valDict[mtch] = valSch.group()\n",
-    "            if not invalid:\n",
-    "                val1Sch = re.search('(?<=replaceAll\\(\"nrpuv\",)[a-z]{8}', newOutputStr)\n",
-    "                val2Sch = re.search('(?<=\\+\"pubs\\/\"\\+)[a-z]{8}', newOutputStr)\n",
-    "                if val1Sch and val2Sch:\n",
-    "                    val1 = val1Sch.group()\n",
-    "                    val2 = val2Sch.group()\n",
-    "                    vidUrl = f\"https:{valDict[val1]}pubs/{valDict[val2]}/1080.mp4\"\n",
-    "                else:\n",
-    "                    invalid = True\n",
-    "            if not invalid:\n",
-    "                print(f\"Found URL:\\n\\t{vidUrl}\\n\\n\")\n",
-    "                download(vidUrl, save_dir= Save_Dir, name= Name)\n",
-    "            else:\n",
-    "                print(valDict, \"\\n\", f\"val1: {val1}, val2: {val2}\")\n",
-    "    else:\n",
-    "        print(\"Search is \", type(srch))\n",
+    "    hqpDCCDownload(VidURL)\n",
+    "\n",
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "ZxUTGFyDuBUz"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
