--- a/dd.ipynb
+++ b/dd.ipynb
@@ -52,12 +52,15 @@
     "    !wget -P \"$tempsave\"$filename \"$directurl\"\n",
     "    !mv \"$tempsave\"/* \"$save_dir\"\n",
     "\n",
-    "def hqpGetInnerURL(url):\n",
+    "def hqpGetInnerURL(url, getSource= False):\n",
     "    reqOutput = !curl $url\n",
     "    outputStr = \"\".join(reqOutput)\n",
     "    srch = ptrDaddy.search(outputStr)\n",
     "    if srch:\n",
-    "        return f\"https://{srch.group()}\"\n",
+    "        innerURL = f\"https://{srch.group()}\"\n",
+    "        if getSource:\n",
+    "            return (innerURL, reqOutput)\n",
+    "        return innerURL\n",
     "    else:\n",
     "        print(\"Search is \", type(srch))\n",
     "\n",
@@ -153,10 +156,7 @@
     "    VidURL = hqpGetInnerURL(MainURL)\n",
     "\n",
     "if VidURL:\n",
-    "    hqpDCCDownload(VidURL)\n",
-    "\n",
-    "\n",
-    "        "
+    "    hqpDCCDownload(VidURL)\n"
    ]
   },
   {
