--- a/dd.ipynb
+++ b/dd.ipynb
@@ -59,10 +59,12 @@
     "    if srch:\n",
     "        innerURL = f\"https://{srch.group()}\"\n",
     "        if getSource:\n",
-    "            return (innerURL, reqOutput)\n",
+    "            return (innerURL, outputStr)\n",
     "        return innerURL\n",
     "    else:\n",
     "        print(\"Search is \", type(srch))\n",
+    "        if getSource:\n",
+    "            return outputStr\n",
     "\n",
     "def hqpDCCDownload(hqpURL, saveDir= \"/content\", name= \"\"):\n",
     "    print(f\"Looking for dcc url in: {hqpURL}\\n\\t...\\n\")\n",
