--- a/dd.ipynb
+++ b/dd.ipynb
@@ -32,6 +32,7 @@
     "ptrDaddy = re.compile(\"mydaddy[^']+(?=')\")\n",
     "ptrVars = re.compile('(?<=;)[a-z]{8}(?==)')\n",
     "ptrExt = re.compile('\\.([a-zA-Z0-9]+)$')\n",
+    "hqpTitlePtn = re.compile(\"(?<=<title>)[\\sa-zA-Z0-9]+(?=\\s-)\")\n",
     "\n",
     "if not os.path.exists(\"/content/drive\"):\n",
     "    drive.mount('/content/drive')\n",
@@ -52,25 +53,26 @@
     "    !wget -P \"$tempsave\"$filename \"$directurl\"\n",
     "    !mv \"$tempsave\"/* \"$save_dir\"\n",
     "\n",
-    "def hqpGetInnerURL(url, getSource= False):\n",
+    "def hqpGetInnerURL(url):\n",
     "    reqOutput = !curl $url\n",
     "    outputStr = \"\".join(reqOutput)\n",
     "    srch = ptrDaddy.search(outputStr)\n",
     "    if srch:\n",
+    "        titleSH = hqpTitlePtn.search(outputStr)\n",
+    "        title = titleSH.group() if titleSH else \"\"\n",
     "        innerURL = f\"https://{srch.group()}\"\n",
-    "        if getSource:\n",
-    "            return (innerURL, outputStr)\n",
-    "        return innerURL\n",
+    "        return (innerURL, title, outputStr)\n",
     "    else:\n",
     "        print(\"Search is \", type(srch))\n",
-    "        if getSource:\n",
-    "            return outputStr\n",
+    "        return (None, None, outputStr)\n",
     "\n",
     "def hqpDCCDownload(hqpURL, saveDir= \"/content\", name= \"\"):\n",
     "    print(f\"Looking for dcc url in: {hqpURL}\\n\\t...\\n\")\n",
     "    reqOutput = !curl $hqpURL\n",
     "    invalid = False\n",
     "    if reqOutput:\n",
+    "        if not name:\n",
+    "            name = nowstr(True) + \"- 1080p\"\n",
     "        newOutputStr = reqOutput[0]\n",
     "        varRes = ptrVars.findall(newOutputStr)\n",
     "        if varRes:\n",
@@ -154,11 +156,17 @@
     "Name = \"\" #@param {type:\"string\"}\n",
     "\n",
     "VidURL = VidURL.strip()\n",
+    "Name = Name.strip()\n",
+    "\n",
     "if MainURL and not VidURL:\n",
-    "    VidURL = hqpGetInnerURL(MainURL)\n",
+    "    vidSH = hqpGetInnerURL(MainURL)\n",
+    "    if vidSH[0]:\n",
+    "        VidURL = vidSH[0]\n",
+    "        if not Name:\n",
+    "            Name = vidSH[1]\n",
     "\n",
     "if VidURL:\n",
-    "    hqpDCCDownload(VidURL)\n"
+    "    hqpDCCDownload(VidURL, saveDir= Save_Dir, name= Name)\n"
    ]
   },
   {
