--- a/dd.ipynb
+++ b/dd.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown\n",
+    "#@markdown Setup\n",
     "\n",
     "import os, pytz, time, re\n",
     "from bs4 import BeautifulSoup as Soup, element\n",
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown\n",
+    "#@markdown Generic Direct\n",
     "\n",
     "Direct_URL = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
@@ -177,7 +177,10 @@
     "id": "ZxUTGFyDuBUz"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#@title { form-width: \"2%\" }\n",
+    "#@markdown\n"
+   ]
   }
  ],
  "metadata": {
