--- a/dd.ipynb
+++ b/dd.ipynb
@@ -29,9 +29,9 @@
     "os.environ['TZ'] = 'Turkey'\n",
     "nowstr = lambda separete = False: datetime.now(tz).strftime(\"%y-%m-%d-%H-%M-%S\") if separete else str(round(time.time()))\n",
     "\n",
-    "ptrDaddy = re.compile(\"mydaddy[^']+(?=')\")\n",
-    "ptrVars = re.compile('(?<=;)[a-z]{8}(?==)')\n",
-    "ptrExt = re.compile('\\.([a-zA-Z0-9]+)$')\n",
+    "ddyPtr = re.compile(\"mydaddy[^']+(?=')\")\n",
+    "hqpVarsPtr = re.compile('(?<=;)[a-z]{8}(?==)')\n",
+    "fileExtPtr = re.compile('\\.([a-zA-Z0-9]+)$')\n",
     "hqpTitlePtn = re.compile(\"(?<=<title>)[\\sa-zA-Z0-9]+(?=\\s-)\")\n",
     "\n",
     "if not os.path.exists(\"/content/drive\"):\n",
@@ -45,7 +45,7 @@
     "    os.makedirs(tempsave, exist_ok=True)\n",
     "\n",
     "    if name:\n",
-    "        extSch = ptrExt.search(directurl)\n",
+    "        extSch = fileExtPtr.search(directurl)\n",
     "        ext = extSch.group() if extSch else \"\"\n",
     "        filename = f' -O \"{tempsave}/{name + ext}\"' \n",
     "    else:\n",
@@ -56,7 +56,7 @@
     "def hqpGetInnerURL(url):\n",
     "    reqOutput = !curl $url\n",
     "    outputStr = \"\".join(reqOutput)\n",
-    "    srch = ptrDaddy.search(outputStr)\n",
+    "    srch = ddyPtr.search(outputStr)\n",
     "    if srch:\n",
     "        titleSH = hqpTitlePtn.search(outputStr)\n",
     "        title = titleSH.group() if titleSH else \"\"\n",
@@ -74,7 +74,7 @@
     "        if not name:\n",
     "            name = nowstr(True) + \"- 1080p\"\n",
     "        newOutputStr = reqOutput[0]\n",
-    "        varRes = ptrVars.findall(newOutputStr)\n",
+    "        varRes = hqpVarsPtr.findall(newOutputStr)\n",
     "        if varRes:\n",
     "            valDict = {}\n",
     "            for mtch in varRes:\n",
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown Generic Direct\n",
+    "#@markdown Direct\n",
     "\n",
     "Direct_URL = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
@@ -184,9 +184,30 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
-  }
+    "colab": {
+        "collapsed_sections": [],
+        "include_colab_link": true,
+        "name": "DGtD",
+        "provenance": []
+      },
+      "gpuClass": "standard",
+      "kernelspec": {
+        "display_name": "Python 3.9.7 64-bit",
+        "language": "python",
+        "name": "python3"
+      },
+      "language_info": {
+        "codemirror_mode": {
+          "name": "ipython",
+          "version": 3
+        },
+        "file_extension": ".py",
+        "mimetype": "text/x-python",
+        "name": "python",
+        "nbconvert_exporter": "python",
+        "pygments_lexer": "ipython3",
+        "version": "3.12.1"
+      }
  },
  "nbformat": 4,
  "nbformat_minor": 2
