--- a/dd.ipynb
+++ b/dd.ipynb
@@ -156,7 +156,7 @@
     "Name = \"\" #@param {type:\"string\"}\n",
     "\n",
     "VidURL = VidURL.strip()\n",
-    "Name = Name.strip()\n",
+    "Name = Name.strip().title()\n",
     "\n",
     "if MainURL and not VidURL:\n",
     "    vidSH = hqpGetInnerURL(MainURL)\n",
@@ -184,30 +184,30 @@
   }
  ],
  "metadata": {
-    "colab": {
-        "collapsed_sections": [],
-        "include_colab_link": true,
-        "name": "DGtD",
-        "provenance": []
-      },
-      "gpuClass": "standard",
-      "kernelspec": {
-        "display_name": "Python 3.9.7 64-bit",
-        "language": "python",
-        "name": "python3"
-      },
-      "language_info": {
-        "codemirror_mode": {
-          "name": "ipython",
-          "version": 3
-        },
-        "file_extension": ".py",
-        "mimetype": "text/x-python",
-        "name": "python",
-        "nbconvert_exporter": "python",
-        "pygments_lexer": "ipython3",
-        "version": "3.12.1"
-      }
+  "colab": {
+   "collapsed_sections": [],
+   "include_colab_link": true,
+   "name": "DGtD",
+   "provenance": []
+  },
+  "gpuClass": "standard",
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
