--- a/hydraulic.v3.1.1
+++ b/hydraulic.v3.1.1
@@ -431,7 +431,7 @@
         "    logger.release()\n",
         "\n",
         "def setup_reqs():\n",
-        "    reqs_set = set('libtorrent')\n",
+        "    reqs_set = set('libtorrent',)\n",
         "    for req in reqs_set:\n",
         "        install_pip_pkg(req)\n",
         "    setup_lt()\n",
@@ -473,7 +473,8 @@
         "import pandas as pd\n",
         "import panel as pn\n",
         "from bokeh.models.widgets.tables import CheckboxEditor, HTMLTemplateFormatter\n",
-        "pn.extension('tabulator')\n",
+        "with hide: # output-hidden\n",
+        "    pn.extension('tabulator')\n",
         "from IPython.display import Javascript\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import VBox, HBox, Box, HTML, Text, FloatProgress, Button, Label, Dropdown, DatePicker, Checkbox, Layout\n",
