--- a/hydraulic.v3.1.1
+++ b/hydraulic.v3.1.1
@@ -375,14 +375,15 @@
         "    logger.info(f\"Installing package '{chk_pkg}'\")\n",
         "    try:\n",
         "        with hide:\n",
-        "            cmd = f\"pip install {pkg} {NULL_STREAM}\"\n",
+        "            cmd = f\"pip install {chk_pkg} {NULL_STREAM}\"\n",
         "            o = !$cmd \n",
         "            hide.clear_output()\n",
-        "        config.installed_pkgs.append(pkg)\n",
+        "            config.installed_pkgs.append(chk_pkg)\n",
         "        return True\n",
-        "    except Exception as e:\n",
+        "    except Exception as e:            \n",
+        "            logger.error(f\"An error happened while installing '{chk_pkg}'\")\n",
         "            logger.error(ex())\n",
-        "            updatestatushtml(f\"An error happened while installing '{pkg}'\", ERROR_EVENT)\n",
+        "            logger.release()\n",
         "\n",
         "def uninstallpippkg(pkg):\n",
         "    with hide:\n",
@@ -431,7 +432,7 @@
         "    logger.release()\n",
         "\n",
         "def setup_reqs():\n",
-        "    reqs_set = set('libtorrent',)\n",
+        "    reqs_set = ('libtorrent',)\n",
         "    for req in reqs_set:\n",
         "        install_pip_pkg(req)\n",
         "    setup_lt()\n",
@@ -440,12 +441,7 @@
         "DRIVE_AND_PATHES = \"enable_drive\"\n",
         "SCRAPE_WATCHED_LIST = \"scrape_watched_list\"\n",
         "\n",
-        "if IS_ENV_COLAB and not 'init' in globals():\n",
-        "    # pathestask = Thread(target= storageandpathes)\n",
-        "    # pathestask.name = DRIVE_AND_PATHES\n",
-        "    # config.setupthreads.add(pathestask)\n",
-        "    # pathestask.start()\n",
-        "\n",
+        "if IS_ENV_COLAB:\n",
         "    setup_lt_task = Thread(target= setup_reqs)\n",
         "    setup_lt_task.name = SETUP_LT\n",
         "    config.setupthreads.add(setup_lt_task)\n",
@@ -456,6 +452,11 @@
         "        scrape_watchedmovielist_task.name = SCRAPE_WATCHED_LIST\n",
         "        config.setupthreads.add(scrape_watchedmovielist_task)\n",
         "        scrape_watchedmovielist_task.start()\n",
+        "\n",
+        "    # pathestask = Thread(target= storageandpathes)\n",
+        "    # pathestask.name = DRIVE_AND_PATHES\n",
+        "    # config.setupthreads.add(pathestask)\n",
+        "    # pathestask.start()\n",
         "\n",
         "storageandpathes()\n",
         "\n",
@@ -3996,7 +3997,7 @@
         "    configview1r5saveconfoutput_html.value = gethtmltext(\"Configuration loaded.\", fontsize='14px', style= saveconfstyle) \n",
         "\n",
         "def search_process(site, search, attrs, category= '', sort= SEEDERSSORT, order= DESCORDER, page= 1, source= SEARCH_TAB):\n",
-        "    logger.info(f\"Searching for {search} in sites {', '.join(site)}\")\n",
+        "    logger.info(f\"Searching for {search} in sites {site}\")\n",
         "    category = getsitecategory(category, site)\n",
         "    if site == X1337X:\n",
         "        result = search1337x(search, sort= sort, order= order, category= category, page= page, attrs= attrs)\n",
@@ -5420,7 +5421,7 @@
         "if IS_ENV_COLAB:\n",
         "    unmount = drive.flush_and_unmount\n",
         "\n",
-        "def resetapp(delinit= False, delfiles= False):\n",
+        "def resetapp(delfiles= False):\n",
         "    if active:\n",
         "        for i in range(len(active)): \n",
         "            ses.remove_torrent(active[i])\n",
@@ -5440,9 +5441,6 @@
         "    update_download_stats_labels()\n",
         "    if delfiles:\n",
         "        !rm -r '/content/d-0/'*\n",
-        "    if delinit and 'init' in globals():\n",
-        "        global init\n",
-        "        del init\n",
         "\n",
         "def restart():\n",
         "    if IS_ENV_COLAB:\n",
@@ -5585,7 +5583,6 @@
         "    for thread in config.setupthreads:\n",
         "        thread.join()\n",
         "\n",
-        "init = True\n",
         "logger.info(\"Cell execution done.\")\n",
         "logger.release()\n",
         "\n",
