--- a/hydraulic.v3.2
+++ b/hydraulic.v3.2
@@ -1801,7 +1801,7 @@
         "            epses = next(os.walk(seasonpath))[2]\n",
         "            for targetepisode in epses:\n",
         "                splt = os.path.splitext(targetepisode)\n",
-        "                if splt[1] == \".mp4\" or splt[1] == \".mkv\": \n",
+        "                if splt[1] in video_file_extensions: \n",
         "                    if contains(splt[0], eps):\n",
         "                        targetpath = path_episode(foundshow, season, targetepisode)\n",
         "                        logger.info(f\"Episode: {searchepisode} is downloaded as {targetpath}\")\n",
@@ -1829,7 +1829,7 @@
         "            splt = os.path.splitext(file)\n",
         "            ext = splt[1]\n",
         "            title: str = splt[0].lower()\n",
-        "            if (ext == \".mp4\" or ext == \".mkv\" or ext == \".av\" or ext == \".ts\") and name.lower().startswith(title):\n",
+        "            if (ext in video_file_extensions) and name.lower().startswith(title):\n",
         "                return path + \"/\" + file\n",
         "    return \"\"\n",
         "\n",
@@ -5241,12 +5241,16 @@
         "\n",
         "userinput_layout = {'width':'800px', 'height':'350px', 'align_items': 'center', 'justify_content': 'flex-start', 'padding': '50px 20px 0 20px', 'border': f'2px solid {LIGHTGREY_COLOR}'}\n",
         "userinputbtn_layout = {'min_width': '100px', 'height':'50px'}\n",
+        "versioninputbtn_layout = {'min_width': '50px', 'min_height':'40px'}\n",
         "userinputrow1_layout = {'width':'99%', 'height':'auto', 'padding':'0 30px', 'margin':'0 0 20px 0'}\n",
         "userinputrow2_layout = {'justify_content':'space-around','padding':'0 50px', 'margin':'0 0 15px 0', 'width':'100%', 'align_items': 'center'}\n",
         "userinputrow3_layout = {'display':'none','justify_content':'space-around','padding':'0 60px','width':'100%', 'align_items': 'center'}\n",
         "userinputtext_layout = {'width':'350px '}\n",
         "userinputtextbtn_layout = {'height':'30px', 'width':'60px'}\n",
         "userinputview_layout = {'width':'100%', 'height':'100%','align_items': 'center', 'padding':'120px 0 0 0'}\n",
+        "\n",
+        "def editboxvalue(box, value, addedvalue):\n",
+        "    box.value = f\"{value} {addedvalue}\"\n",
         "\n",
         "def userdecisionview(inputviewchildren):\n",
         "    userinputview_vbox = VBox(inputviewchildren, layout= userinputview_layout)\n",
@@ -5261,19 +5265,29 @@
         "def replace_download_decision(prep_res: Prepare_Result):\n",
         "    message_html = HTML(gethtmltext(f'The {prep_res.typestr} \"{prep_res.attrs.name}\" is already downloaded and saved as: {prep_res.foundpath}<br>Do you want to replace old file or rename new download?', fontsize= '16px', color= DARKGERYCOLOR))\n",
         "    row1userinput_box = Box((message_html,), layout= userinputrow1_layout)\n",
+        "    \n",
         "    replaceoption_btn = Button(description= \"Replace\", layout= userinputbtn_layout)\n",
         "    mergeoption_btn = Button(description= \"Merge\", layout= userinputbtn_layout)\n",
         "    canceloption_btn = Button(description= \"Cancel Download\", layout= userinputbtn_layout)\n",
         "    rename_btn = Button(description= \"Rename New File\", layout= userinputbtn_layout)\n",
         "    row2userinput_hbox = HBox((mergeoption_btn, replaceoption_btn, canceloption_btn, rename_btn), layout= userinputrow2_layout)\n",
-        "    newname_text = Text(description= \"New file name: \",style={'description_width': '100px'}, layout= userinputtext_layout)\n",
+        "\n",
+        "    v1080p_btn = Button(description= \"1080p\", layout= versioninputbtn_layout)\n",
+        "    v4k_btn = Button(description= \"4K\", layout= versioninputbtn_layout)\n",
+        "    v3d_btn = Button(description= \"3D\", layout= versioninputbtn_layout)\n",
+        "    row3userinput_hbox = HBox((v1080p_btn, v4k_btn, v3d_btn), layout= userinputrow3_layout)  \n",
+        "\n",
+        "    newname_text = Text(description= \"New file name: \", style={'description_width': '100px'}, value= prep_res.attrs.save_name, layout= userinputtext_layout)\n",
+        "    v1080p_btn.on_click(lambda b: editboxvalue(newname_text, prep_res.attrs.save_name, \"v:1080p\"))\n",
+        "    v4k_btn.on_click(lambda b: editboxvalue(newname_text, prep_res.attrs.save_name, \"v:4K\"))\n",
+        "    v3d_btn.on_click(lambda b: editboxvalue(newname_text, prep_res.attrs.save_name, \"v:3D\"))\n",
         "    savename_btn = Button(description= \"OK\", disabled= True, layout= userinputtextbtn_layout)\n",
-        "    row3userinput_hbox = HBox((newname_text, savename_btn), layout= userinputrow3_layout)\n",
-        "    rename_btn.on_click(lambda b: showview(row3userinput_hbox))\n",
+        "    row4userinput_hbox = HBox((newname_text, savename_btn), layout= userinputrow3_layout)\n",
+        "    rename_btn.on_click(lambda b: showview(row4userinput_hbox))\n",
         "\n",
         "    def handletextinputchange(change):\n",
         "        newval = newname_text.value.strip()\n",
-        "        if newval:\n",
+        "        if newval == prep_res.attrs.save_name:\n",
         "            savename_btn.disabled = False\n",
         "        else: savename_btn.disabled = True\n",
         "    \n",
@@ -5282,15 +5296,16 @@
         "        return already_downloaded_handler(AlreadyDownloadedDecision(RENAME_DOWNLOAD, newname), prep_res.attrs)\n",
         "          \n",
         "    newname_text.observe(handletextinputchange, 'value')\n",
+        "    savename_btn.on_click(renamedownloadaction)\n",
+        "\n",
         "    replaceoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(REPLACE_DOWNLOAD), prep_res.attrs))\n",
         "    mergeoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(MERGE_DOWNLOAD), prep_res.attrs))\n",
         "    canceloption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(CANCEL_DOWNLOAD), prep_res.attrs))\n",
-        "    savename_btn.on_click(renamedownloadaction)\n",
-        "    userinput_vbox = userinputbox((row1userinput_box, row2userinput_hbox, row3userinput_hbox))\n",
+        "\n",
+        "    userinput_vbox = userinputbox((row1userinput_box, row2userinput_hbox, row3userinput_hbox, row4userinput_hbox))\n",
         "    switchview(nav[ADD_TAB], nextview= userdecisionview((userinput_vbox,)), temp= True)\n",
         "\n",
         "def searchsitedecisionview():\n",
-        "    \n",
         "    return\n",
         "\n",
         "##\n",
