--- a/dd.ipynb
+++ b/dd.ipynb
@@ -150,23 +150,23 @@
     "#@title { form-width: \"2%\" }\n",
     "#@markdown HQP\n",
     "\n",
-    "MainURL = \"\" #@param {type:\"string\"}\n",
-    "VidURL = \"\" #@param {type:\"string\"}\n",
+    "VidURLs = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
-    "Name = \"\" #@param {type:\"string\"}\n",
+    "Names = \"\" #@param {type:\"string\"}\n",
     "\n",
-    "VidURL = VidURL.strip()\n",
-    "Name = Name.strip().title()\n",
-    "\n",
-    "if MainURL and not VidURL:\n",
-    "    vidSH = hqpGetInnerURL(MainURL)\n",
-    "    if vidSH[0]:\n",
-    "        VidURL = vidSH[0]\n",
-    "        if not Name:\n",
-    "            Name = vidSH[1]\n",
-    "\n",
-    "if VidURL:\n",
-    "    hqpDCCDownload(VidURL, saveDir= Save_Dir, name= Name)\n"
+    "urls = VidURLs.split(\",,,\")\n",
+    "names = Names.split(\",,,\")\n",
+    "if len(urls) == len(names):\n",
+    "    print(f\"Downloading {len(urls)} links.\\n\")\n",
+    "    for i in range(len(urls)):\n",
+    "        url = urls[i].strip()\n",
+    "        name = names[i].strip().title()\n",
+    "        if url and name:\n",
+    "            hqpDCCDownload(url, saveDir= Save_Dir, name= name)\n",
+    "        else:\n",
+    "            print(\"URL or Name is empty!\")\n",
+    "else:\n",
+    "    raise(\"URLs and Names have different length!\")"
    ]
   },
   {
