--- a/dd.ipynb
+++ b/dd.ipynb
@@ -130,6 +130,23 @@
    },
    "outputs": [],
    "source": [
+    "#@title Find{ form-width: \"2%\" }\n",
+    "#@markdown\n",
+    "\n",
+    "loc = \"\" #@param {type:\"string\"}\n",
+    "srch = \"\" #@param {type:\"string\"}\n",
+    "!find \"$loc\" -name \"*$srch*\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "ZxUTGFyDuBUz"
+   },
+   "outputs": [],
+   "source": [
     "#@title { form-width: \"2%\" }\n",
     "#@markdown JUST CURL\n",
     "\n",
