--- a/dd.ipynb
+++ b/dd.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown Setup\n",
+    "#@markdown #### Setup\n",
     "\n",
     "import os, pytz, time, re\n",
     "from bs4 import BeautifulSoup as Soup, element\n",
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown Direct\n",
+    "#@markdown #### Direct\n",
     "\n",
     "Direct_URL = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
@@ -130,8 +130,8 @@
    },
    "outputs": [],
    "source": [
-    "#@title Find{ form-width: \"2%\" }\n",
-    "#@markdown\n",
+    "#@title { form-width: \"2%\" }\n",
+    "#@markdown #### Find\n",
     "\n",
     "loc = \"\" #@param {type:\"string\"}\n",
     "srch = \"\" #@param {type:\"string\"}\n",
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown JUST CURL\n",
+    "#@markdown #### JUST CURL\n",
     "\n",
     "URL = \"\" #@param {type:\"string\"}\n",
     "\n",
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "#@markdown HQP\n",
+    "#@markdown #### HQP\n",
     "\n",
     "VidURLs = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
