--- a/dd.ipynb
+++ b/dd.ipynb
@@ -117,6 +117,9 @@
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
     "Name = \"\" #@param {type:\"string\"}\n",
     "\n",
+    "if not Name.endswith(\".mp4\") and not Name.endswith(\".mkv\"):\n",
+    "    Name += \".mp4\"\n",
+    "\n",
     "if Direct_URL:\n",
     "    download(Direct_URL, save_dir= Save_Dir, name= Name)"
    ]
