--- a/dd.ipynb
+++ b/dd.ipynb
@@ -28,6 +28,7 @@
     "tz = pytz.timezone('Turkey')\n",
     "os.environ['TZ'] = 'Turkey'\n",
     "nowstr = lambda separete = False: datetime.now(tz).strftime(\"%y-%m-%d-%H-%M-%S\") if separete else str(round(time.time()))\n",
+    "file_size_limit = 40000 # 40 KB\n",
     "\n",
     "ddyPtr = re.compile(\"mydaddy[^']+(?=')\")\n",
     "hqpVarsPtr = re.compile('(?<=;)[a-z]{8}(?==)')\n",
@@ -37,20 +38,41 @@
     "if not os.path.exists(\"/content/drive\"):\n",
     "    drive.mount('/content/drive')\n",
     "\n",
+    "def has_size(path, only_check = True):\n",
+    "    size = 0\n",
+    "    if not os.path.exists(path):\n",
+    "        return 0\n",
+    "    if os.path.isfile(path):\n",
+    "        size = os.path.getsize(path)\n",
+    "    else:  \n",
+    "        for path, dirs, files in os.walk(path):\n",
+    "            for file in files:\n",
+    "                filepath = os.path.join(path, file)\n",
+    "                size += os.path.getsize(filepath)\n",
+    "                if only_check and size >= file_size_limit:\n",
+    "                    return True\n",
+    "    if size >= file_size_limit:\n",
+    "        return size\n",
+    "    else:\n",
+    "        return 0\n",
+    "        \n",
     "def download(directurl, save_dir= \"/content/Downloads\", name= \"\"):\n",
     "    tempsave = \"/content/done/\" + nowstr() \n",
-    "    name = name.strip()\n",
-    "\n",
-    "    os.makedirs(save_dir, exist_ok=True)\n",
     "    os.makedirs(tempsave, exist_ok=True)\n",
-    "\n",
+    "    name = name.strip()\n",
     "    if name:\n",
     "        extSch = fileExtPtr.search(directurl)\n",
     "        ext = extSch.group() if extSch else \"\"\n",
-    "        filename = f' -O \"{tempsave}/{name + ext}\"' \n",
+    "        if not name.endswith(ext):\n",
+    "            name = name + ext\n",
+    "        filename = f' -O \"{tempsave}/{name}\"' \n",
     "    else:\n",
     "        filename = \"\"\n",
     "    !wget -P \"$tempsave\"$filename \"$directurl\"\n",
+    "    if not has_size(tempsave): \n",
+    "        print(\"Download failed!\")\n",
+    "        return\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
     "    !mv \"$tempsave\"/* \"$save_dir\"\n",
     "\n",
     "def hqpGetInnerURL(url):\n",
@@ -66,9 +88,9 @@
     "        print(\"Search is \", type(srch))\n",
     "        return (None, None, outputStr)\n",
     "\n",
-    "def hqpDCCDownload(hqpURL, saveDir= \"/content\", name= \"\"):\n",
-    "    print(f\"Looking for dcc url in: {hqpURL}\\n\\t...\\n\")\n",
-    "    reqOutput = !curl $hqpURL\n",
+    "def hCCDownload(hURL, saveDir= \"/content\", name= \"\"):\n",
+    "    print(f\"Looking for cc url in: {hURL}\\n\\t...\\n\")\n",
+    "    reqOutput = !curl $hURL\n",
     "    invalid = False\n",
     "    if reqOutput:\n",
     "        if not name:\n",
@@ -81,7 +103,7 @@
     "                valPt = f'(?<={mtch}=\")(\\/\\/|\\d)[^\"]+'\n",
     "                valSch = re.search(valPt, newOutputStr)\n",
     "                if not valSch:\n",
-    "                    print(f\"Val for {mtch} wasn't found!\")\n",
+    "                    print(f\"Value for {mtch} wasn't found!\")\n",
     "                    invalid = True\n",
     "                    break\n",
     "                valDict[mtch] = valSch.group()\n",
@@ -182,7 +204,8 @@
     "        url = urls[i].strip()\n",
     "        name = names[i].strip().title()\n",
     "        if url and name:\n",
-    "            hqpDCCDownload(url, saveDir= Save_Dir, name= name)\n",
+    "            print(f\"Downloading {i+1} of {len(urls)}:\\t{name}\")\n",
+    "            hCCDownload(url, saveDir= Save_Dir, name= name)\n",
     "        else:\n",
     "            print(\"URL or Name is empty!\")\n",
     "else:\n",
