--- a/dd.ipynb
+++ b/dd.ipynb
@@ -199,12 +199,12 @@
     "urls = VidURLs.split(\",,,\")\n",
     "names = Names.split(\",,,\")\n",
     "if len(urls) == len(names):\n",
-    "    print(f\"Downloading {len(urls)} links.\\n\")\n",
+    "    print(f\"Downloading {len(urls)} links.\")\n",
     "    for i in range(len(urls)):\n",
     "        url = urls[i].strip()\n",
     "        name = names[i].strip().title()\n",
     "        if url and name:\n",
-    "            print(f\"Downloading {i+1} of {len(urls)}:\\t{name}\")\n",
+    "            print(f\"\\nDownloading {i+1} of {len(urls)}:\\t{name}\")\n",
     "            hCCDownload(url, saveDir= Save_Dir, name= name)\n",
     "        else:\n",
     "            print(\"URL or Name is empty!\")\n",
