--- a/dd.ipynb
+++ b/dd.ipynb
@@ -60,15 +60,21 @@
     "    tempsave = \"/content/done/\" + nowstr() \n",
     "    os.makedirs(tempsave, exist_ok=True)\n",
     "    name = name.strip()\n",
+    "    cm = f\"wget\"\n",
+    "    if os.path.isfile(\"/content/cf\"):\n",
+    "        cm += \" --load-cookies /content/cf\"\n",
+    "    cm += f' -P \"{tempsave}\"'\n",
+    "\n",
     "    if name:\n",
     "        extSch = fileExtPtr.search(directurl)\n",
     "        ext = extSch.group() if extSch else \"\"\n",
     "        if not name.endswith(ext):\n",
     "            name = name + ext\n",
-    "        filename = f' -O \"{tempsave}/{name}\"' \n",
-    "    else:\n",
-    "        filename = \"\"\n",
-    "    !wget -P \"$tempsave\"$filename \"$directurl\"\n",
+    "        cm += f' -O \"{tempsave}/{name}\"' \n",
+    "\n",
+    "    cm += f' \"{directurl}\"'\n",
+    "    print(f\"  {cm}\")\n",
+    "    !$cm\n",
     "    if not has_size(tempsave): \n",
     "        print(\"Download failed!\")\n",
     "        return\n",
@@ -133,7 +139,29 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
+    "#@markdown\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "ZxUTGFyDuBUz"
+   },
+   "outputs": [],
+   "source": [
+    "#@title { form-width: \"2%\" }\n",
     "#@markdown #### Direct\n",
+    "\n",
+    "cookie = \"\"\"\n",
+    "\"\"\"\n",
+    "\n",
+    "if len(cookie) > 100:\n",
+    "    with open(\"cf\", \"w\") as file:\n",
+    "        file.write(cookie)\n",
+    "elif os.path.isfile(\"/content/cf\"):   \n",
+    "    !rm \"/content/cf\"\n",
     "\n",
     "Direct_URL = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
