--- a/dd.ipynb
+++ b/dd.ipynb
@@ -56,23 +56,23 @@
     "    else:\n",
     "        return 0\n",
     "        \n",
-    "def download(directurl, save_dir= \"/content/Downloads\", name= \"\"):\n",
+    "def download_file(url, save_dir= \"/content/Downloads\", name= \"\", headers= \"\"):\n",
     "    tempsave = \"/content/done/\" + nowstr() \n",
     "    os.makedirs(tempsave, exist_ok=True)\n",
     "    name = name.strip()\n",
-    "    cm = f\"wget\"\n",
+    "    cm = f\"wget {headers}\" if headers else \"wget\"\n",
     "    if os.path.isfile(\"/content/cf\"):\n",
     "        cm += \" --load-cookies /content/cf\"\n",
     "    cm += f' -P \"{tempsave}\"'\n",
     "\n",
     "    if name:\n",
-    "        extSch = fileExtPtr.search(directurl)\n",
+    "        extSch = fileExtPtr.search(url)\n",
     "        ext = extSch.group() if extSch else \"\"\n",
     "        if not name.endswith(ext):\n",
     "            name = name + ext\n",
     "        cm += f' -O \"{tempsave}/{name}\"' \n",
     "\n",
-    "    cm += f' \"{directurl}\"'\n",
+    "    cm += f' \"{url}\"'\n",
     "    print(f\"  {cm}\")\n",
     "    !$cm\n",
     "    if not has_size(tempsave): \n",
@@ -124,7 +124,7 @@
     "                    invalid = True\n",
     "            if not invalid:\n",
     "                print(f\"Found URL:\\n\\t{vidUrl}\\n\\n\")\n",
-    "                download(vidUrl, save_dir= saveDir, name= name)\n",
+    "                download_file(vidUrl, save_dir= saveDir, name= name)\n",
     "            else:\n",
     "                print(valDict, \"\\n\", f\"val1: {val1}, val2: {val2}\")\n"
    ]
@@ -154,6 +154,12 @@
     "#@title { form-width: \"2%\" }\n",
     "#@markdown #### Direct\n",
     "\n",
+    "Name = \"\" #@param {type:\"string\"}\n",
+    "URL = \"\" #@param {type:\"string\"}\n",
+    "Ref = \"\" #@param {type:\"string\"}\n",
+    "Save_Dir = \"\" #@param {type:\"string\"}\n",
+    "PTC = \"\" #@param {type:\"string\"}\n",
+    "\n",
     "cookie = \"\"\"\n",
     "\"\"\"\n",
     "\n",
@@ -163,15 +169,15 @@
     "elif os.path.isfile(\"/content/cf\"):   \n",
     "    !rm \"/content/cf\"\n",
     "\n",
-    "Direct_URL = \"\" #@param {type:\"string\"}\n",
-    "Save_Dir = \"\" #@param {type:\"string\"}\n",
-    "Name = \"\" #@param {type:\"string\"}\n",
+    "headers = \"\"\n",
+    "if PTC:\n",
+    "    headers = f'--header=\"accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\" --header=\"accept-encoding: gzip, deflate, br, zstd\" --header=\"accept-language: fr-FR,fr;q=0.9\" --header=\\'cookie: {PTC}\\' --header=\"dnt: 1\" --header=\"priority: u=0, i\" --header=\"referer: {Ref}\" --header=\\'sec-ch-ua: \"Chromium\";v=\"136\", \"Google Chrome\";v=\"136\", \"Not.A/Brand\";v=\"99\"\\' --header=\"sec-ch-ua-mobile: ?0\" --header=\\'sec-ch-ua-platform: \"Windows\"\\' --header=\"sec-fetch-dest: document\" --header=\"sec-fetch-mode: navigate\" --header=\"sec-fetch-site: same-origin\" --header=\"sec-fetch-user: ?1\" --header=\"upgrade-insecure-requests: 1\" --header=\\'user-agent: Mozilla/5.0 Windows NT 10.0; Win64; x64 AppleWebKit/537.36 KHTML, like Gecko Chrome/136.0.0.0 Safari/537.36\\''\n",
     "\n",
     "if not Name.endswith(\".mp4\") and not Name.endswith(\".mkv\"):\n",
     "    Name += \".mp4\"\n",
     "\n",
-    "if Direct_URL:\n",
-    "    download(Direct_URL, save_dir= Save_Dir, name= Name)"
+    "if URL:\n",
+    "    download_file(URL, save_dir= Save_Dir, name= Name, headers= headers)"
    ]
   },
   {
